	* arch/arm/src/stm32/stm32_otgfshost.c:  Renamed from stm32_usbhost.c.
	  This is nearly code complete and, with any luck, will be available
	  in NuttX-6.21.
	* configs/*/defconfig:  Update all defconfig files to remove syntax
	  that is incompatible with the mconf configuration tool.
	* arch/arm/src/stm32/stm32_otgfshost.c:  This driver now appears to be
	  functional (although more testing is necesary).

6.22 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* include/semaphore.h, sched/sem_holders.c, and lib/semaphore/sem_init.c:
	  Fix some strange (and probably wrong) list handling when
	  CONFIG_PRIORITY_INHERITANCE and CONFIG_SEM_PREALLOCHOLDERS are defined.
	  This list handling was probably causing errors reported by Mike Smith
	* sched/sched_waitpid.c: Fix a possible issue with logic logic that
	  should be brought into a critical section (suggested by Mike Smith)
	* sched/sched_setuptaskfiles.c: Should be 'struct socket' not
	  'struct sockets'.  How did this compile before? (found by Kate)
	* syscall/syscall.csv:  Fix prototype for usleep() and prctl() (also
	  from Kate).
	* arch/arm/src/lpc17xx/lpc17_ethernet.c:  Conditionally elide setting PHY
	  speed/duplex.  This does not work for certain PHYs.  Still some unresolved
	  issues (also from Kate).
	* tools/Config.mk, Makefile, configs/*/Make.defs:  Add a new Makefile
	  fragement to de-quoate certain strings from the Kconfig logic that
	  need to be used at path segments (Richard Cochran).
	* arch/arm/src/stm32/stm32_usbotghost.c:  The STM32 USB host driver only
	  works with debug turned on.  The problem appears to be that with debug
	  OFF, there are more NAKs occuring in more places than before and this
	  reveals a variety of errors.  This check in improves NAK robustness
	  for control transfers but does not resolve all of the issues.
	* configs/stm3220g-eval/*/defconfig:  Calibrated delay loop.  It had
	  never been calibrated was was way off.
