@@ -148,9 +148,12 @@ config NSH_FILEIOSIZE
 config NSH_STRERROR
 	bool "Use strerror()"
 	default n
+	depends on LIBC_STRERROR
 	---help---
 		strerror(errno) makes more readable output but strerror() is
 		very large and will not be used unless this setting is 'y'
+		This setting depends upon the strerror() having been enabled
+		with LIBC_STRERROR.
 
 config NSH_LINELEN
 	int "Max command line length"
