@@ -23,7 +23,7 @@ config NUNGET_CHARS
 	---help---
 		Number of characters that can be buffered by ungetc() (Only if NFILE_STREAMS > 0)
 
-config CONFIG_LIB_HOMEDIR
+config LIB_HOMEDIR
 	string "Home directory"
 	default "/"
 	depends on !DISABLE_ENVIRON
@@ -51,6 +51,46 @@ config LIBC_FLOATINGPOINT
 		By default, floating point
 		support in printf, sscanf, etc. is disabled.
 
+config LIBC_STRERROR
+	bool "Enable strerror"
+	default n
+	---help---
+		strerror() is useful because it decodes 'errno' values into a human readable
+		strings.  But it can also require a lot of memory.  If this option is selected,
+		strerror() will still exist in the build but it will not decode error values.
+		This option should be used by other logic to decide if it should use strerror()
+		or not.  For example, the NSH application will not use strerror() if this
+		option is not selected; perror() will not use strerror() is this option is not
+		selected (see also NSH_STRERROR).
+
+config LIBC_STRERROR_SHORT
+	bool "Use short error descriptions in strerror()"
+	default n
+	depends on LIBC_STRERROR
+	---help---
+		If this option is selected, then strerror() will use a shortened string when
+		it decodes the error.  Specifically, strerror() is simply use the string that
+		is the common name for the error.  For example, the 'errno' value of 2 will
+		produce the string "No such file or directory" is LIBC_STRERROR_SHORT
+		is not defined but the string "ENOENT" is LIBC_STRERROR_SHORT is defined.
+
+config LIBC_PERROR_STDOUT
+	bool "perror() to stdout"
+	default n
+	---help---
+		POSIX requires that perror() provide its output on stderr.  This option may
+		be defined, however, to provide perror() output that is serialized with
+		other stdout messages.
+
+config LIBC_PERROR_DEVNAME
+	string "perror() to device"
+	default "/dev/console"
+	depends on !LIBC_PERROR_STDOUT
+	---help---
+		Another non-standard option is to provide perror() output to a logging device
+		or file. LIBC_PERROR_DEVNAME may be defined to be any write-able,
+		character device (or file).
+
 config ARCH_LOWPUTC
 	bool "Low-level console output"
 	default "y"
@@ -68,7 +108,7 @@ config ENABLE_ARCH_OPTIMIZED_FUN
 
 		The architecture may provide custom versions of certain
 		standard header files:
-		config ARCH_MATH_H, CONFIG_ARCH_STDBOOL_H, CONFIG_ARCH_STDINT_H
+		config ARCH_MATH_H, ARCH_STDBOOL_H, ARCH_STDINT_H
 
 if 	ENABLE_ARCH_OPTIMIZED_FUN
 config ARCH_MEMCPY
